--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Django==4.0.5
 django-debug-toolbar==3.4.0
 django-templated-mail==1.1.1
 factory-boy==3.2.1
+Faker==13.14.0
 h11==0.13.0
 idna==3.3
 inflection==0.5.1
