--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ cryptography==37.0.2
 Deprecated==1.2.13
 Django==4.0.5
 django-debug-toolbar==3.4.0
+django-redis==5.2.0
 django-templated-mail==1.1.1
 factory-boy==3.2.1
 Faker==13.14.0
