--- a/requirements.txt
+++ b/requirements.txt
@@ -68,6 +68,7 @@ pyzmq==22.3.0
 redis==4.3.3
 requests==2.28.1
 roundrobin==0.0.2
+selenium==4.4.0
 six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
