--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,7 @@ Jinja2==3.1.2
 kombu==5.2.4
 locust==2.10.2
 MarkupSafe==2.1.1
+model-bakery==1.7.0
 msgpack==1.0.4
 mysql-connector-python==8.0.30
 mysqlclient==2.1.1
