--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ async-generator==1.10
 async-timeout==4.0.2
 attrs==21.4.0
 autopep8==1.6.0
-backports.zoneinfo==0.2.1
+backports.zoneinfo==0.2.1;python_version<"3.9"
 billiard==3.6.4.0
 Brotli==1.0.9
 celery==5.2.7
