--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,20 +10,21 @@ services:
     image: blog:1.0 
     restart: on-failure
     depends_on:
-      - db
+      # - db
       - redis
   # mysql
-  db:
-    image: mysql
-    volumes:
-      - mysqldata:/var/lib/mysql/
-    ports:
-        - 3306:3306
-    restart: on-failure
-    environment:
-      MYSQL_DATABASE: mysql
-      MYSQL_USER: root
-      MSQL_PASSWORD: root
+  # db:
+  #   image: mysql
+  #   volumes:
+  #     - mysqldata:/var/lib/mysql/
+  #   ports:
+  #       - 3306:3306
+  #   restart: on-failure
+  #   environment:
+  #     MYSQL_DATABASE: mysql
+  #     MYSQL_USER: root
+  #     MSQL_PASSWORD: root
+
   # redis
   redis:
     image: redis:6.2-alpine
@@ -50,5 +51,5 @@ services:
     restart: always
 
 volumes:
-  mysqldata:
+  # mysqldata:
   redisdata: 
