--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ async-generator==1.10
 async-timeout==4.0.2
 attrs==21.4.0
 autopep8==1.6.0
-backports.zoneinfo==0.2.1;python_version<"3.9"
 billiard==3.6.4.0
 Brotli==1.0.9
 celery==5.2.7
@@ -26,6 +25,7 @@ django-redis==5.2.0
 django-silk==5.0.1
 django-templated-mail==1.1.1
 django-widget-tweaks==1.4.12
+ez-setup==0.9
 factory-boy==3.2.1
 Faker==13.14.0
 Flask==2.1.3
@@ -48,8 +48,6 @@ locust==2.10.2
 MarkupSafe==2.1.1
 model-bakery==1.7.0
 msgpack==1.0.4
-mysql-connector-python==8.0.30
-mysqlclient==2.1.1
 outcome==1.2.0
 packaging==21.3
 Pillow==9.1.1
@@ -57,7 +55,6 @@ pluggy==1.0.0
 prompt-toolkit==3.0.29
 protobuf==3.20.1
 psutil==5.9.1
-psycopg2==2.9.3
 py==1.11.0
 pycodestyle==2.9.0
 pycparser==2.21
@@ -83,7 +80,7 @@ toml==0.10.2
 tomli==2.0.1
 trio==0.21.0
 trio-websocket==0.9.2
-typing-extensions==4.2.0
+typing_extensions==4.2.0
 urllib3==1.26.9
 vine==5.0.0
 wcwidth==0.2.5
